--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 auth:
     user: uasys
     password: nbmcrjv0z869943m
+# Specify the path of the OpenAPI documentation
+springdoc.api-docs.path=/api-docs
+# Specify the path of the Swagger UI
+springdoc.swagger-ui.path=/swagger-ui.html
+# Enable or disable Swagger UI
+springdoc.swagger-ui.enabled=true
+
+auth2:
+    user: system
+    password: ZARtQtMBt0J9yBrO
